--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>SM공대 분배금 계산기 (Supabase 연동 · 관리자 권한 v11 - 완성판)</title>
+  <title>SM공대 분배금 계산기</title>
   <style>
     body { background-color: #000; color: #fff; font-family: Arial, sans-serif; padding: 20px; }
     .tabs { display: flex; margin-bottom: 10px; }
