--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <h1>SM공대 분배금 계산기 (Supabase 연동 · 관리자 권한 v11 - 완성판)</h1>
+  <h1>SM공대 분배금 계산기</h1>
 
   <!-- 로그인 UI -->
   <div id="auth">
